# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py
brain_games/brain_even/: game.py
brain_games/flow/: cli.py  game.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
