[tool.poetry]
name = "p-kachalov_brain_games"
version = "1.0.0"
description = ""
authors = ["Pavel Kachalov <pa.kachalov@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
