[tool.poetry]
name = "p-kachalov_brain_games"
version = "1.1.0"
description = ""
authors = ["Pavel Kachalov <pa.kachalov@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
black = "^19.10b0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:play"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

