[tool.poetry]
name = "p-kachalov_brain_games"
version = "1.5.2"
description = "A small set of simple console games."
authors = ["Pavel Kachalov <pa.kachalov@gmail.com>"]
repository = "https://github.com/p-kachalov/python-project-lvl1"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
black = "^19.10b0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

